--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "^2.0.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
