--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,7 @@ PHOTO_URL=D:\DENTAL\DT-BACKEND
 NODE_ENV=development
 REDIS_EXPIRE_TIME=300
 REDIS_URL=redis://localhost:6379
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
