--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "mime-types": "^3.0.1",
+    "minio": "^8.0.5",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
@@ -30,7 +32,8 @@
     "nodemon": "^3.1.9",
     "rate-limit": "^0.1.1",
     "redis": "^4.7.0",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
