--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rate-limit": "^0.1.1",
     "redis": "^4.7.0",
     "sharp": "^0.34.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
