--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,11 @@ DB_USER=root
 DB_PASS=1234
 DB_NAME=dental
 PHOTO_URL=D:\DENTAL\DT-BACKEND
-NODE_ENV=production
+NODE_ENV=development
 REDIS_EXPIRE_TIME=300
 REDIS_URL=redis://localhost:6379
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+WRTC_PORT=4005
