--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "node-cron": "^4.1.0",
     "nodemon": "^3.1.9",
     "rate-limit": "^0.1.1",
     "redis": "^4.7.0",
