--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "keycloak-admin": "^1.14.22",
+    "luxon": "^3.6.1",
     "mime-types": "^3.0.1",
     "minio": "^8.0.5",
     "moment": "^2.30.1",
