keycloak-issue-fixed

--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,5 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 WRTC_PORT=4005
 KEYCLOAK_BASE_URL=http://localhost:8080
+REALM_TENANT_MAP=smilecare:1,anotherrealm:2
+
