--- a/.env.development
+++ b/.env.development
@@ -13,5 +13,7 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 WRTC_PORT=4005
 KEYCLOAK_BASE_URL=http://localhost:8080
-REALM_TENANT_MAP=smilecare:1,anotherrealm:2
+# KEYCLOAK_BASE_URL=https://auth-bus.aathirrantravels.in/
+REALM_TENANT_MAP=smilecare:1
+REALM_TENANT_DOMAIN_MAP=.in:1
 
