currency_code-phonenumber-20

--- a/.env.development
+++ b/.env.development
@@ -7,13 +7,8 @@ PHOTO_URL=D:\DENTAL\DT-BACKEND
 NODE_ENV=development
 REDIS_EXPIRE_TIME=300
 REDIS_URL=redis://localhost:6379
-MINIO_ENDPOINT=localhost
-MINIO_PORT=9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
-WRTC_PORT=4005
-KEYCLOAK_BASE_URL=http://localhost:8080
-# KEYCLOAK_BASE_URL=https://auth-bus.aathirrantravels.in/
+# KEYCLOAK_BASE_URL=http://localhost:8080
+KEYCLOAK_BASE_URL=https://auth-bus.aathirrantravels.in/
 REALM_TENANT_MAP=smilecare:1
 REALM_TENANT_DOMAIN_MAP=.in:1
 
