--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ PHOTO_URL=D:\DENTAL\DT-BACKEND
 NODE_ENV=development
 REDIS_EXPIRE_TIME=300
 REDIS_URL=redis://localhost:6379
-KEYCLOAK_BASE_URL=http://localhost:8080
+# KEYCLOAK_BASE_URL=http://localhost:8080
 # KEYCLOAK_BASE_URL=https://auth-bus.aathirrantravels.in/
 REALM_TENANT_MAP=smilecare:1
 REALM_TENANT_DOMAIN_MAP=.in:1
