--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "fs": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
