--- a/.env.development
+++ b/.env.development
@@ -12,4 +12,6 @@ REDIS_URL=redis://localhost:6379
 REALM_TENANT_MAP=smilecare:1
 REALM_TENANT_DOMAIN_MAP=.in:1
 KEYCLOAK_POWER=off
+DOCUMENT_MAX_SIZE=5 #in MB
+PHOTO_MAX_SIZE=2 #in MB
 
