--- a/.env.development
+++ b/.env.development
@@ -11,7 +11,7 @@ REDIS_URL=redis://localhost:6379
 # KEYCLOAK_BASE_URL=https://auth-bus.aathirrantravels.in/
 REALM_TENANT_MAP=smilecare:1
 REALM_TENANT_DOMAIN_MAP=.in:1
-KEYCLOAK_POWER=off
+KEYCLOAK_POWER=on
 DOCUMENT_MAX_SIZE=5 #in MB
 PHOTO_MAX_SIZE=2 #in MB
 
